# Sigil

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .swiftformat  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  Dockerfile  README.md  README_INTEGRATION.md  SECURITY.md  appcast.xml  breaks.md  clawdbot.config.js  docker-compose.yml  docker-setup.sh  docs.acp.md  fixes.md  fly.private.toml  fly.toml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  setup-skills.bat  setup-skills.sh  test_live_workflow.py  test_sigil.py  vitest.config.ts  vitest.e2e.config.ts  vitest.live.config.ts  workflow_search.py  workflow_search_lightrag.py
.github/: dependabot.yml
docs/: _config.yml  api-contract-builder.md  api-contract-cli.md  api-contract-errors.md  api-contract-mcp-integration.md  api-contract-memory.md  api-contract-phase5-planning-reasoning.md  api-contract-phase6-contracts.md  api-contract-phase7-integration.md  api-contract-session.md  api-contract-tools.md  api-guidelines-phase5.md  api-guidelines-phase6.md  api-guidelines-phase7.md  bedrock.md  brave-search.md  broadcast-groups.md  cli-architecture.md  cli-execution-flow.md  cli-implementation-roadmap.md  cli-monitoring-guide.md  cli-token-budgeting.md  date-time.md  debugging.md  docs.json  environment.md  hooks.md  index.md  logging-contracts.md  logging.md  monitoring-api.yaml  monitoring-implementation-guide.md  multi-agent-sandbox-tools.md  network.md  northflank.mdx  openapi-phase5-planning-reasoning.yaml  openapi-phase6-contracts.yaml  (+18 more)
(+2585 files in other folders)
